# SiPMTrigger

./: .gitignore  README.md
daq/: Makefile
daq/cfg/: daq.cfg
daq/inc/: Daq.h  FADC.h  config.h
daq/src/: Daq.c  Daq.c-2012-11-21  FADC.c  FADC.c.2013-10-07  config.c
decode/: Gain.ods  build  ch_vs_ch_x_energy.ods  data-X-56.0V-copy.list  data-X-56.0V.list  data-X-56.0V.root  data-X-b02-100.list  data-X-b02-tmp-2.root  data-X-b02.list  data-Y-54.5V.list  data-Y-54.5V.root  data-Y-55.0V.list  data-Y-55.0V.root  data-Y-55.5V-2.root  data-Y-55.5V.list  data-Y-55.5V.root  data-Y-56.0V-300.list  data-Y-56.0V-300.root  data-Y-56.0V.list  data-Y-b03-tmp-2.root  data-Y-b03-tmp.list  data-Y-b03-tmp.root  data-Z-56.0V-test.list  data-Z-56.0V.list  data-Z-56.0V.root  decode  decode.c  gmon.out  histos.root  histos_temp.root  io.h  list
sim/: CMakeLists.txt  action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  generator.cc  generator.hh  physics.cc  physics.hh  run.cc  run.hh  run.mac  sipm.cc  vis.mac
